<resources>
    <string name="app_name">laundrrin</string>
    <string name="title_home">Home</string>
    <string name="title_payment">Pembayaran</string>
    <string name="title_progres">Progres</string>
    <string name="title_user">user</string>
    <string name="title_paket">Paket Laundry</string>
    <string-array name="role">
        <item>Driver</item>
        <item>User</item>
    </string-array>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>