<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_paket"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_paket" />

    <item
        android:id="@+id/navigation_pembayaran"
        android:icon="@drawable/ic_pembayaran"
        android:title="@string/title_payment" />

    <item
        android:id="@+id/navigation_progres"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_progres" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_user"
        android:title="@string/title_user" />


</menu>